--- a/src/main/resources/com/davfx/ninio/ping/reference.conf
+++ b/src/main/resources/com/davfx/ninio/ping/reference.conf
@@ -1,7 +1,8 @@
-ping.port = 9999
-
 ping {
 	minTimeToRepeat = 30 seconds
 	repeatTime = 10 seconds
 	timeoutFromBeginning = 10 seconds
+
+	port = 9998
+	maxSimultaneousClients = 100
 }
