--- a/src/main/resources/com/davfx/ninio/snmp/reference.conf
+++ b/src/main/resources/com/davfx/ninio/snmp/reference.conf
@@ -1,8 +1,9 @@
 snmp {
-	minTimeToRepeat = 3 seconds
-	repeatTime = 2 seconds
+	minTimeToRepeat = 1 seconds
+	repeatTime = 1 seconds
 	timeoutFromBeginning = 30 seconds
 	timeoutFromLastReception = 25 seconds
 	bulkSize = 50
 	getLimit = 1000
+	repeatRandomization = 0.25 second
 }
