--- a/src/main/resources/com/davfx/ninio/http/util/reference.conf
+++ b/src/main/resources/com/davfx/ninio/http/util/reference.conf
@@ -20,3 +20,47 @@ http.route {
 		}
 	]
 }
+
+http.file {
+	bind {
+		host = 0.0.0.0
+		port = 8082
+	}
+	
+	path = "."
+	
+	mime = [
+		{
+			type = "application/javascript"
+			extension = ".js"
+		}
+		{
+			type = "application/pdf"
+			extension = ".pdf"
+		}
+		{
+			type = "application/json; charset=UTF-8"
+			extension = ".json"
+		}
+		{
+			type = "image/jpeg"
+			extension = ".jpg"
+		}
+		{
+			type = "image/png"
+			extension = ".png"
+		}
+		{
+			type = "text/css; charset=UTF-8"
+			extension = ".css"
+		}
+		{
+			type = "text/xml; charset=UTF-8"
+			extension = ".xml"
+		}
+		{
+			type = "text/html; charset=UTF-8"
+			extension = ".html"
+		}
+	]
+}
