--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -5,9 +5,10 @@ proxy {
 	
 	port = 9999
 	maxSimultaneousClients = 2
-	
-	tcpdump {
-		interface = en0
-		port = 161
-	}
+
+	sync = false	
+#	tcpdump {
+#		interface = en0
+#		port = 161
+#	}
 }
