--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
 		<dependency>
 			<groupId>com.davfx</groupId>
 			<artifactId>util</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
