Simplified Ping protocol

--- a/src/main/resources/com/davfx/ninio/ping/reference.conf
+++ b/src/main/resources/com/davfx/ninio/ping/reference.conf
@@ -1,7 +1,8 @@
 ping {
-	minTimeToRepeat = 30 seconds
-	repeatTime = 10 seconds
-	timeoutFromBeginning = 10 seconds
+	#@Deprecated minTimeToRepeat = 30 seconds
+	#@Deprecated repeatTime = 10 seconds
+	#@Deprecated timeoutFromBeginning = 10 seconds
+	timeout = 3 seconds
 
 	port = 9998
 	maxSimultaneousClients = 100
