--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.davfx</groupId>
 	<artifactId>ninio</artifactId>
-	<version>0.0.5-SNAPSHOT</version>
+	<version>0.0.6</version>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>A Java NIO HTTP client/server as light as possible</description>
 	<url>https://github.com/davidfauthoux/ninio</url>
@@ -29,7 +29,7 @@
 
 	<packaging>jar</packaging>
 	<properties>
-		<jdk.version>1.8</jdk.version>
+		<jdk.version>1.7</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
