Fix telnet scripts

--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -4,6 +4,11 @@ proxy {
 	reproxy = r
 	ping = p
 	
+	timeout {
+		connection = 10 seconds
+		read = 10 seconds
+	}
+	
 	port = 9999
 	maxSimultaneousClients = 2
 
