Fix telnet and remote

--- a/src/main/resources/com/davfx/ninio/remote/reference.conf
+++ b/src/main/resources/com/davfx/ninio/remote/reference.conf
@@ -1,5 +1,7 @@
+remote.cache.expire.threshold = 10
+
 remote.waiting {
 	callWithEmptyTime = 1 second
-	endOfCommandTime = 2 seconds
+	endOfCommandTime = 5 seconds
 	timeout = 30 seconds
 }
