--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -4,10 +4,7 @@ proxy {
 	reproxy = r
 	ping = p
 	
-	timeout {
-		connection = 10 seconds
-		read = 10 seconds
-	}
+	timeout.connection = 10 seconds
 	
 	port = 9999
 	maxSimultaneousClients = 2
