HTTP routing generic by header

--- a/src/main/resources/com/davfx/ninio/http/util/reference.conf
+++ b/src/main/resources/com/davfx/ninio/http/util/reference.conf
@@ -5,14 +5,16 @@ http.route {
 	}
 	map = [
 		{
-			host = "127.0.0.1:8082"
+			header = Host
+			match = "127\.0\.0\.1\:8082"
 			to {
 				host = localhost
 				port = 8080
 			}
 		}
 		{
-			host = "localhost:8082"
+			header = Host
+			match = "localhost\:8082"
 			to {
 				host = localhost
 				port = 8081
