--- a/src/main/resources/com/davfx/ninio/http/util/reference.conf
+++ b/src/main/resources/com/davfx/ninio/http/util/reference.conf
@@ -5,16 +5,14 @@ http.route {
 	}
 	map = [
 		{
-			header = Host
-			match = "127\.0\.0\.1\:8082"
+			host = "127.0.0.1:8082"
 			to {
 				host = localhost
 				port = 8080
 			}
 		}
 		{
-			header = Host
-			match = "localhost\:8082"
+			host = "localhost:8082"
 			to {
 				host = localhost
 				port = 8081
@@ -33,7 +31,7 @@ http.service {
 http.file {
 	bind {
 		host = 0.0.0.0
-		port = 8082
+		port = 8080
 	}
 	
 	path = "."
