Configurable script engine

--- a/src/main/resources/com/davfx/ninio/script/reference.conf
+++ b/src/main/resources/com/davfx/ninio/script/reference.conf
@@ -1,4 +1,5 @@
 script {
+	engine = JavaScript // If needed, use "rhino" // https://wiki.openjdk.java.net/display/Nashorn/Using+Rhino+JSR-223+engine+with+JDK8
 	mode = string // json|string
 	functions {
 		call = call
