Proxy read timeout and keepalive

--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -4,7 +4,10 @@ proxy {
 	reproxy = r
 	ping = p
 	
-	timeout.connection = 10 seconds
+	timeout {
+		connection = 10 seconds
+		read = 0
+	}
 	
 	port = 6666
 	maxSimultaneousClients = 2
