--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -12,11 +12,11 @@ proxy {
 	port = 6666
 	maxSimultaneousClients = 2
 
-	sync = false	
-#	tcpdump {
-#		interface = en0
-#		port = 161
-#	}
+	sync = true	
+	tcpdump {
+		interface = lo0
+		port = 161
+	}
 
 	filter = []
 }
