Proxy server multitenant. Tcpdump fix.

--- a/src/main/resources/com/davfx/ninio/proxy/sync/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/sync/reference.conf
@@ -1,2 +1,8 @@
-proxy.sync.buffer.size = 64 KiB
-proxy.tcpdump.packet.size = 10 KiB
+proxy {
+	sync.buffer.size = 64 KiB
+
+	tcpdump {
+		packet.size = 10 KiB
+		packet.header = 26 // 26 on Linux, 16 on MacOS X
+	}
+}
