--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -4,6 +4,8 @@ proxy {
 	reproxy = r
 	ping = p
 	
+	forward = []
+	
 	timeout {
 		connection = 10 seconds
 		read = 0
@@ -12,7 +14,7 @@ proxy {
 	port = 6666
 	maxSimultaneousClients = 2
 
-	sync = true	
+	mode.datagram = sync.tcpdump // sync.tcpdump|sync.java|async
 	tcpdump {
 		interface = lo0
 		port = 161
