Connect timeout on remote layer

--- a/src/main/resources/com/davfx/ninio/remote/reference.conf
+++ b/src/main/resources/com/davfx/ninio/remote/reference.conf
@@ -1,6 +1,7 @@
 remote.cache.expire.threshold = 10
 
 remote.waiting {
+	connectTimeout = 30 seconds
 	callWithEmptyTime = 1 second
 	timeout = 120 seconds
 }
