Different header sizes

--- a/src/main/resources/com/davfx/ninio/common/reference.conf
+++ b/src/main/resources/com/davfx/ninio/common/reference.conf
@@ -1,3 +1,15 @@
 ninio.queue.buffer.size = 64 KiB
 
-tcpdump.packet.size = 10 KiB
+tcpdump {
+	packet.size = 10 KiB
+	packet.header {
+		mono {
+			macosx = 16
+			default = 26
+		}
+		multi {
+			// Does not work because Mac OS X uses pcap-ng // macosx = 16
+			default = 28
+		}
+	}
+}
