--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -16,6 +16,7 @@ proxy {
 
 	mode.datagram = sync.tcpdump // sync.tcpdump|sync.java|async
 	tcpdump {
+		promiscuous = true
 		interface = lo0
 		port = 161
 	}
