Tcpdump more robust when no bind, using port without host to match

--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -16,7 +16,7 @@ proxy {
 
 	mode.datagram = sync.tcpdump // sync.tcpdump|sync.java|async
 	tcpdump {
-		promiscuous = true
+		promiscuous = false
 		interface = lo0
 		port = 161
 	}
