--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -14,7 +14,7 @@ proxy {
 	port = 6666
 	maxSimultaneousClients = 2
 
-	mode.datagram = sync.tcpdump // sync.tcpdump|sync.java|async
+	mode.datagram = async // sync.tcpdump|async
 	tcpdump {
 		interface = lo0
 		port = 161
