Default Mac OS X conf

--- a/src/main/resources/com/davfx/ninio/common/reference.conf
+++ b/src/main/resources/com/davfx/ninio/common/reference.conf
@@ -8,7 +8,7 @@ tcpdump {
 			default = 26
 		}
 		multi {
-			// Does not work because Mac OS X uses pcap-ng // macosx = 16
+			macosx = 0 // Does not work because Mac OS X uses pcap-ng
 			default = 28
 		}
 	}
