Reusable script engine as interface and 2 classes

--- a/src/main/resources/com/davfx/ninio/script/reference.conf
+++ b/src/main/resources/com/davfx/ninio/script/reference.conf
@@ -1,5 +1,7 @@
 script {
 	engine = JavaScript // If needed, use "rhino" // https://wiki.openjdk.java.net/display/Nashorn/Using+Rhino+JSR-223+engine+with+JDK8
+	prepared = false
+	
 	mode = string // json|string
 	functions {
 		call = call
