--- a/src/main/resources/com/davfx/ninio/script/reference.conf
+++ b/src/main/resources/com/davfx/ninio/script/reference.conf
@@ -1,12 +1,11 @@
 script {
 	engine = JavaScript // If needed, use "rhino" // https://wiki.openjdk.java.net/display/Nashorn/Using+Rhino+JSR-223+engine+with+JDK8
-	prepared = false
 	
 	mode = string // json|string
 	functions {
 		call = call
 		log = log
-		unicity.prefix = __
+		unicity.prefix = "__$"
 	}
 	log.prefix = "[From scripts] "
 }
