Fix using function$

--- a/src/main/resources/com/davfx/ninio/script/util/reference.conf
+++ b/src/main/resources/com/davfx/ninio/script/util/reference.conf
@@ -2,11 +2,11 @@ script {
 	threading = 4
 	cache = true
 	functions {
-		http = http
-		telnet = telnet
-		ssh = ssh
-		snmp = snmp
-		ping = ping
-		end = end
+		http = "http$"
+		telnet = "telnet$"
+		ssh = "ssh$"
+		snmp = "snmp$"
+		ping = "ping$"
+		end = "end$"
 	}
 }
