Proxy throttle available, conf proxy.throttle.bps

--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -21,4 +21,12 @@ proxy {
 	}
 
 	filter = []
+	
+	throttle {
+		bps = 0
+		step {
+			time = 0.5 second // Computes the throttle every 0.5 second
+			bytes = 100 // Or computes the throttle each time the number of bytes written is bigger than 100
+		}
+	}
 }
