Fix tcpdump layer: does not create a socket if receiver prepared

--- a/src/main/resources/com/davfx/ninio/proxy/reference.conf
+++ b/src/main/resources/com/davfx/ninio/proxy/reference.conf
@@ -29,4 +29,15 @@ proxy {
 			bytes = 100 // Or computes the throttle each time the number of bytes written is bigger than 100
 		}
 	}
+	
+	log.datagram {
+		read {
+			prefix = "UDP READ"
+			step = 1M
+		}
+		write {
+			prefix = "UDP WRITE"
+			step = 1M
+		}
+	}
 }
