Fix UDP buffer size. Datagram socket sharing.

--- a/src/main/resources/com/davfx/ninio/common/reference.conf
+++ b/src/main/resources/com/davfx/ninio/common/reference.conf
@@ -1,4 +1,11 @@
-ninio.queue.buffer.size = 64 KiB
+ninio {
+	queue.buffer.size = 64 KiB
+
+	datagram {
+		read.size = 8388608
+		write.size = 8388608
+	}
+}
 
 tcpdump {
 	packet.size = 10 KiB
