Limit onto datagram socket write. Fix cache ping

--- a/src/main/resources/com/davfx/ninio/common/reference.conf
+++ b/src/main/resources/com/davfx/ninio/common/reference.conf
@@ -2,8 +2,12 @@ ninio {
 	queue.buffer.size = 64 KiB
 
 	datagram {
-		read.size = 8388608
-		write.size = 8388608
+		read.size = 8 MiB
+		write.size = 8 MiB
+		write.buffer = 100 MiB
+	}
+	socket {
+		write.buffer = 100 MiB
 	}
 }
 
@@ -21,7 +25,7 @@ tcpdump {
 	}
 	
 	datagram {
-		read.size = 8388608
-		write.size = 8388608
+		read.size = 8 MiB
+		write.size = 8 MiB
 	}
 }
