--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>com.davfx</groupId>
-	<artifactId>ninio</artifactId>
-	<version>1.0.0</version>
+	<artifactId>davfx-ninio-parent</artifactId>
+	<version>2.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>A Java NIO HTTP client/server as light as possible</description>
 	<url>https://github.com/davidfauthoux/ninio</url>
@@ -27,7 +29,6 @@
 		<url>https://github.com/davidfauthoux/ninio.git</url>
 	</scm>
 
-	<packaging>jar</packaging>
 	<properties>
 		<jdk.version>1.7</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -118,13 +119,12 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
+	<modules>
+		<module>davfx-ninio-csv</module>
+	</modules>
+
 	<dependencies>
-		<dependency>
-			<groupId>com.davfx</groupId>
-			<artifactId>util</artifactId>
-			<version>1.0.0</version>
-		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
@@ -168,4 +168,7 @@
 			<version>2.2.4</version>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+	</dependencyManagement>
 </project>
