--- a/ninio-core/pom.xml
+++ b/ninio-core/pom.xml
@@ -2,12 +2,20 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.davfx</groupId>
-		<artifactId>davfx-ninio-parent</artifactId>
+		<groupId>com.davfx.ninio</groupId>
+		<artifactId>ninio-parent</artifactId>
 		<version>2.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>davfx-ninio-util</artifactId>
+	<artifactId>ninio-core</artifactId>
 
 	<packaging>jar</packaging>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-util</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
