--- a/ninio-util/pom.xml
+++ b/ninio-util/pom.xml
@@ -2,20 +2,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.davfx</groupId>
-		<artifactId>davfx-ninio-parent</artifactId>
+		<groupId>com.davfx.ninio</groupId>
+		<artifactId>ninio-parent</artifactId>
 		<version>2.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>davfx-ninio-csv</artifactId>
+	<artifactId>ninio-util</artifactId>
 
 	<packaging>jar</packaging>
-	
-	<dependencies>
-		<dependency>
-			<groupId>com.davfx</groupId>
-			<artifactId>davfx-ninio-util</artifactId>
-			<version>2.0-SNAPSHOT</version>
-		</dependency>
-	</dependencies>
 </project>
