--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.davfx</groupId>
-	<artifactId>davfx-ninio-parent</artifactId>
+	<groupId>com.davfx.ninio</groupId>
+	<artifactId>ninio-parent</artifactId>
 	<version>2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -121,8 +121,10 @@
 	</profiles>
 
 	<modules>
-		<module>davfx-ninio-util</module>
-		<module>davfx-ninio-csv</module>
+		<module>ninio-util</module>
+		<module>ninio-csv</module>
+		<module>ninio-core</module>
+		<module>ninio-snmp</module>
 	</modules>
 
 	<dependencies>
