--- a/ninio-core/src/main/resources/reference.conf
+++ b/ninio-core/src/main/resources/reference.conf
@@ -6,13 +6,13 @@ ninio {
 		write.size = 8 MiB
 		write.buffer = 100 MiB
 	}
+	
 	socket {
 		write.buffer = 100 MiB
 	}
 
 	tcpdump {
-		packet.size = 10 KiB
-
+		mode = raw
 		datagram {
 			read.size = 8 MiB
 			write.size = 8 MiB
