--- a/ninio-snmp/pom.xml
+++ b/ninio-snmp/pom.xml
@@ -10,4 +10,12 @@
 	<artifactId>ninio-snmp</artifactId>
 
 	<packaging>jar</packaging>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-core</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
