SNMP server and tests

--- a/ninio-snmp/src/main/resources/reference.conf
+++ b/ninio-snmp/src/main/resources/reference.conf
@@ -1,8 +1,10 @@
 ninio.snmp {
 	minTimeToRepeat = 5 seconds
 	repeatTime = 5 seconds
-	defaultTimeoutFromBeginning = 30 seconds
 	bulkSize = 10
 	getLimit = 1000
 	repeatRandomization = 0.25 second
+
+	defaultTimeoutFromBeginning = 30 seconds
+	defaultCommunity = "public"
 }
