--- a/ninio-ftp/pom.xml
+++ b/ninio-ftp/pom.xml
@@ -7,7 +7,7 @@
 		<version>2.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>ninio-ssh</artifactId>
+	<artifactId>ninio-ftp</artifactId>
 
 	<packaging>jar</packaging>
 
@@ -17,17 +17,5 @@
 			<artifactId>ninio-core</artifactId>
 			<version>2.0-SNAPSHOT</version>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.53</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-ext-jdk15on</artifactId>
-			<version>1.53</version>
-		</dependency>
-		-->
 	</dependencies>
 </project>
