--- a/ninio-snmp/pom.xml
+++ b/ninio-snmp/pom.xml
@@ -9,7 +9,7 @@
 
 	<artifactId>ninio-snmp</artifactId>
 
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<dependencies>
 		<dependency>
