--- a/ninio-ssh/pom.xml
+++ b/ninio-ssh/pom.xml
@@ -17,6 +17,11 @@
 			<artifactId>ninio-core</artifactId>
 			<version>2.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-telnet</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
