--- a/pom.xml
+++ b/pom.xml
@@ -127,8 +127,6 @@
 	</profiles>
 
 	<modules>
-		<module>ninio-util</module>
-		<module>ninio-csv</module>
 		<module>ninio-core</module>
 		<module>ninio-snmp</module>
 		<module>ninio-telnet</module>
@@ -139,6 +137,11 @@
 	</modules>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.davfx</groupId>
+			<artifactId>davfx-util</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
