--- a/ninio-http/src/main/resources/reference.conf
+++ b/ninio-http/src/main/resources/reference.conf
@@ -1,10 +1,53 @@
 ninio.http {
-	gzip.buffer.size = 4 KiB
+	gzip.buffer = 4 KiB
 	
 	redirect.max = 10
 	
 	recyclers {
 		ttl = 30 seconds
 		check = 10 seconds
+	}
+	
+	file {
+		index = "index.html"
+		buffer = 32 KiB
+		contentTypes = [
+			{
+				extension = ".html"
+				contentType = "text/html"
+			}
+			{
+				extension = ".txt"
+				contentType = "text/plain"
+			}
+			{
+				extension = ".css"
+				contentType = "text/css"
+			}
+			{
+				extension = ".js"
+				contentType = "application/javascript"
+			}
+			{
+				extension = ".json"
+				contentType = "application/json"
+			}
+			{
+				extension = ".jpg"
+				contentType = "image/jpeg"
+			}
+			{
+				extension = ".jpeg"
+				contentType = "image/jpeg"
+			}
+			{
+				extension = ".png"
+				contentType = "image/png"
+			}
+		]
+	}
+	
+	service {
+		threads = 20
 	}
 }
