--- a/ninio-http/src/main/resources/reference.conf
+++ b/ninio-http/src/main/resources/reference.conf
@@ -14,23 +14,23 @@ ninio.http {
 		contentTypes = [
 			{
 				extension = ".html"
-				contentType = "text/html"
+				contentType = "text/html; charset=UTF-8"
 			}
 			{
 				extension = ".txt"
-				contentType = "text/plain"
+				contentType = "text/plain; charset=UTF-8"
 			}
 			{
 				extension = ".css"
-				contentType = "text/css"
+				contentType = "text/css; charset=UTF-8"
 			}
 			{
 				extension = ".js"
-				contentType = "application/javascript"
+				contentType = "application/javascript; charset=UTF-8"
 			}
 			{
 				extension = ".json"
-				contentType = "application/json"
+				contentType = "application/json; charset=UTF-8"
 			}
 			{
 				extension = ".jpg"
@@ -43,6 +43,10 @@ ninio.http {
 			{
 				extension = ".png"
 				contentType = "image/png"
+			}
+			{
+				extension = ".pdf"
+				contentType = "application/pdf"
 			}
 		]
 	}
