--- a/ninio-core/pom.xml
+++ b/ninio-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio-parent</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 
 	<artifactId>ninio-core</artifactId>
