--- a/ninio-proxy/pom.xml
+++ b/ninio-proxy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio-parent</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 
 	<artifactId>ninio-proxy</artifactId>
@@ -15,12 +15,12 @@
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-ping</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 	</dependencies>
 </project>
