--- a/ninio-script/pom.xml
+++ b/ninio-script/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio-parent</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 
 	<artifactId>ninio-script</artifactId>
@@ -15,37 +15,37 @@
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx</groupId>
 			<artifactId>davfx-script</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-ping</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-snmp</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-telnet</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-ssh</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-http</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 	</dependencies>
 </project>
