--- a/ninio-ssh/pom.xml
+++ b/ninio-ssh/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio-parent</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 
 	<artifactId>ninio-ssh</artifactId>
@@ -15,13 +15,14 @@
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-telnet</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>${ninio.version}</version>
 		</dependency>
+
 		<!--
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
