--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 	</scm>
 
 	<properties>
+		<ninio.version>2.0</ninio.version>
 		<jdk.version>1.8</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
