--- a/ninio-proxy/pom.xml
+++ b/ninio-proxy/pom.xml
@@ -3,7 +3,7 @@
 
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
-		<artifactId>ninio-parent</artifactId>
+		<artifactId>ninio</artifactId>
 		<version>2.0</version>
 	</parent>
 
