--- a/ninio-http/src/main/resources/reference.conf
+++ b/ninio-http/src/main/resources/reference.conf
@@ -1,5 +1,8 @@
 ninio.http {
-	gzip.buffer = 4 KiB
+	gzip {
+		buffer = 4 KiB
+		default = true
+	}
 	
 	redirect.max = 10
 	
@@ -52,7 +55,7 @@ ninio.http {
 	}
 	
 	service {
-		threads = 10
+		threads = 8
 		post.limit = 1 MiB
 		stream.buffer = 32 KiB
 	}
