--- a/ninio-http/pom.xml
+++ b/ninio-http/pom.xml
@@ -8,6 +8,7 @@
 	</parent>
 
 	<artifactId>ninio-http</artifactId>
+	<version>2.1.3-SNAPSHOT</version>
 
 	<packaging>bundle</packaging>
 
@@ -15,6 +16,13 @@
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.jetty.aggregate</groupId>
+			<artifactId>jetty-all-server</artifactId>
+			<version>8.1.18.v20150929</version>
 		</dependency>
 	</dependencies>
 </project>
