--- a/ninio-proxy/pom.xml
+++ b/ninio-proxy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>2.1.2</version>
+		<version>2.2.0</version>
 	</parent>
 
 	<artifactId>ninio-proxy</artifactId>
@@ -19,6 +19,10 @@
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-ping</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-snmp</artifactId>
 		</dependency>
 	</dependencies>
 </project>
