--- a/ninio-snmp/src/main/resources/reference.conf
+++ b/ninio-snmp/src/main/resources/reference.conf
@@ -8,5 +8,10 @@ ninio.snmp {
 	defaultTimeoutFromBeginning = 30 seconds
 	defaultCommunity = "public"
 
-	cache.fail.expiration = 30 seconds
+	cache {
+		check = 10 seconds
+		timeout = 20 seconds
+		expiration = 30 seconds
+		repeat = 5 seconds
+	}
 }
