--- a/ninio-proxy/src/main/resources/reference.conf
+++ b/ninio-proxy/src/main/resources/reference.conf
@@ -10,7 +10,9 @@ ninio.proxy {
 		connection = 10 seconds
 		read = 24 hours
 	}
+	backlog = 50
 	
+	host = 0.0.0.0
 	port = 6666
 	maxSimultaneousClients = 2
 
