--- a/ninio-snmp/pom.xml
+++ b/ninio-snmp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>2.2.2</version>
+		<version>2.2.3</version>
 	</parent>
 
 	<artifactId>ninio-snmp</artifactId>
@@ -22,5 +22,16 @@
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.8.11.2</version>
 		</dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+		
 	</dependencies>
 </project>
