SNMP connection cache

--- a/ninio-snmp/src/main/resources/reference.conf
+++ b/ninio-snmp/src/main/resources/reference.conf
@@ -8,7 +8,7 @@ ninio.snmp {
 	defaultTimeoutFromBeginning = 30 seconds
 	defaultCommunity = "public"
 
-	cache {
+	server.cache {
 		check = 10 seconds
 		timeout = 20 seconds
 		expiration = 30 seconds
