--- a/ninio-snmp/src/main/resources/reference.conf
+++ b/ninio-snmp/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 ninio.snmp {
 	minTimeToRepeat = 5 seconds
-	repeatTime = 5 seconds
+	repeatTime = 1 second
 	bulkSize = 10
 	getLimit = 1000
 	repeatRandomization = 0.25 second
@@ -12,6 +12,6 @@ ninio.snmp {
 		check = 10 seconds
 		timeout = 20 seconds
 		expiration = 30 seconds
-		repeat = 5 seconds
+		repeat = 3 seconds
 	}
 }
