--- a/ninio-snmp/src/main/resources/reference.conf
+++ b/ninio-snmp/src/main/resources/reference.conf
@@ -1,9 +1,14 @@
 ninio.snmp {
-	minTimeToRepeat = 5 seconds
-	repeatTime = 1 second
+	repeat {
+		min = 5 seconds
+		time = 1 second
+		randomization = 0.25 second
+	}
 	bulkSize = 10
 	getLimit = 1000
-	repeatRandomization = 0.25 second
+	auth {
+		cache = 300 seconds
+	}
 
 	defaultTimeoutFromBeginning = 30 seconds
 	defaultCommunity = "public"
