SNMP timeout now from the last request

--- a/ninio-snmp/src/main/resources/reference.conf
+++ b/ninio-snmp/src/main/resources/reference.conf
@@ -10,7 +10,7 @@ ninio.snmp {
 		cache = 300 seconds
 	}
 
-	defaultTimeoutFromBeginning = 30 seconds
+	defaultTimeout = 30 seconds
 	defaultCommunity = "public"
 
 	server.cache {
