Fix snmp v3, now with only one discover for multiple OID requests

--- a/ninio-snmp/src/main/resources/reference.conf
+++ b/ninio-snmp/src/main/resources/reference.conf
@@ -1,7 +1,7 @@
 ninio.snmp {
 	repeat {
 		min = 5 seconds
-		time = 1 second
+		time = 5 seconds
 		randomization = 0.25 second
 	}
 	bulkSize = 10
@@ -17,6 +17,6 @@ ninio.snmp {
 		check = 10 seconds
 		timeout = 20 seconds
 		expiration = 30 seconds
-		repeat = 1 seconds
+		repeat = 5 seconds
 	}
 }
