Proxy cache by packet, that's nice

--- a/ninio-proxy/src/main/resources/reference.conf
+++ b/ninio-proxy/src/main/resources/reference.conf
@@ -32,4 +32,6 @@ ninio.proxy {
 			bytes = 100 // Or computes the throttle each time the number of bytes written is bigger than 100
 		}
 	}
+	
+	cache.expiration = 30 seconds
 }
