--- a/ninio-core/pom.xml
+++ b/ninio-core/pom.xml
@@ -4,10 +4,18 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>2.3.6</version>
+		<version>2.3.7-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ninio-core</artifactId>
 
 	<packaging>bundle</packaging>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.8.11.2</version>
+		</dependency>
+	</dependencies>
 </project>
