--- a/ninio-proxy/pom.xml
+++ b/ninio-proxy/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>2.3.6</version>
+		<version>2.3.7-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ninio-proxy</artifactId>
@@ -19,12 +19,6 @@
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-ping</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.davfx.ninio</groupId>
-			<artifactId>ninio-snmp</artifactId>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
