--- a/ninio-snmp/pom.xml
+++ b/ninio-snmp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>2.3.6</version>
+		<version>2.3.7-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ninio-snmp</artifactId>
@@ -16,16 +16,11 @@
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-proxy</artifactId>
+			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.8.11.2</version>
-		</dependency>
-		
 	</dependencies>
 </project>
