--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>com.davfx</groupId>
 			<artifactId>davfx-util</artifactId>
-			<version>2.1.4</version>
+			<version>2.1.5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
