--- a/ninio-snmp/pom.xml
+++ b/ninio-snmp/pom.xml
@@ -16,5 +16,11 @@
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-proxy</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
