--- a/ninio-proxy/src/main/resources/reference.conf
+++ b/ninio-proxy/src/main/resources/reference.conf
@@ -32,4 +32,8 @@ ninio.proxy {
 			bytes = 100 // Or computes the throttle each time the number of bytes written is bigger than 100
 		}
 	}
+	
+	// v3
+	tcp = tcp
+	udp = udp
 }
