--- a/ninio-proxy/pom.xml
+++ b/ninio-proxy/pom.xml
@@ -20,5 +20,9 @@
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-ping</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-http</artifactId>
+		</dependency>
 	</dependencies>
 </project>
