--- a/ninio-core/src/main/resources/reference.conf
+++ b/ninio-core/src/main/resources/reference.conf
@@ -1,17 +1,17 @@
 ninio {
-	buffer.default = 64 KiB
+	buffer.default = 4 KiB
 
 	queue.buffer = 64 KiB
 
 	datagram {
 		read.size = 8 MiB
 		write.size = 8 MiB
-		write.buffer = 100 MiB
+		write.buffer = 0 // 100 MiB
 	}
 	
 	socket {
 		read.size = 64 KiB
-		write.buffer = 100 MiB
+		write.buffer = 0 // 100 MiB
 	}
 
 	tcpdump {
