--- a/ninio-ssh/pom.xml
+++ b/ninio-ssh/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>2.3.7-SNAPSHOT</version>
+		<version>2.3.7</version>
 	</parent>
 
 	<artifactId>ninio-ssh</artifactId>
@@ -33,5 +33,15 @@
 			<version>1.53</version>
 		</dependency>
 		-->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
+		</dependency>
 	</dependencies>
 </project>
