--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.davfx.ninio</groupId>
 	<artifactId>ninio</artifactId>
-	<version>2.3.7-SNAPSHOT</version>
+	<version>2.3.7</version>
 	<!-- mvn versions:set -DgenerateBackupPoms=false -->
 
 	<packaging>pom</packaging>
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>com.davfx</groupId>
 			<artifactId>davfx-util</artifactId>
-			<version>2.1.5-SNAPSHOT</version>
+			<version>2.1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
