--- a/ninio-http/src/main/resources/com.davfx.ninio.http.v3.conf
+++ b/ninio-http/src/main/resources/com.davfx.ninio.http.v3.conf
@@ -57,6 +57,8 @@ ninio.http {
 		threads = 8
 		post.limit = 1 MiB
 		stream.buffer = 32 KiB
-		epsilon = 1000 // B/s
+		stream.epsilon = 1000 // B/s
+		resources = "/"
+		index = "index.html"
 	}
 }
