--- a/ninio-snmp/pom.xml
+++ b/ninio-snmp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>2.3.8-SNAPSHOT</version>
+		<version>2.3.8</version>
 	</parent>
 
 	<artifactId>ninio-snmp</artifactId>
