Before script modif

--- a/ninio-script/pom.xml
+++ b/ninio-script/pom.xml
@@ -17,5 +17,10 @@
 			<artifactId>rhino</artifactId>
 			<version>1.7.7.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-util</artifactId>
+		</dependency>
 	</dependencies>
 </project>
