--- a/ninio-script/pom.xml
+++ b/ninio-script/pom.xml
@@ -22,5 +22,10 @@
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-util</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
 	</dependencies>
 </project>
