Proxy header class

--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -23,6 +23,8 @@ com.davfx.ninio.core {
 			read.size = 8 MiB
 			write.size = 8 MiB
 		}
+		interface = eth0
+		rule = ""
 	}
 	
 	timeout.precision = 1 second
