--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -3,18 +3,8 @@ include com.davfx.ninio.util
 com.davfx.ninio.core {
 	buffer.default = 4 KiB
 
-	queue.buffer = 64 KiB
-
-	datagram {
-		read.size = 8 MiB
-		write.size = 8 MiB
-		write.buffer = 0 // 100 MiB
-	}
-	
-	socket {
-		read.size = 64 KiB
-		write.buffer = 0 // 100 MiB
-	}
+	datagram.write.buffer = 0 // 100 MiB
+	socket.write.buffer = 0 // 100 MiB
 
 	tcpdump {
 		path = tcpdump
