--- a/ninio-snmp/src/main/resources/com.davfx.ninio.snmp.conf
+++ b/ninio-snmp/src/main/resources/com.davfx.ninio.snmp.conf
@@ -2,7 +2,7 @@ include com.davfx.ninio.core
 
 com.davfx.ninio.snmp {
 	bulkSize = 10
-	getLimit = 1000 //TODO See if I can remove this limit
+	// getLimit = 1000
 	auth {
 		cache = 300 seconds
 	}
