--- a/ninio-http/src/main/resources/com.davfx.ninio.http.conf
+++ b/ninio-http/src/main/resources/com.davfx.ninio.http.conf
@@ -1,60 +1,48 @@
 include com.davfx.ninio.core
 
-//TODO clean up
 com.davfx.ninio.http {
-	gzip {
-		buffer = 4 KiB
-	}
+	gzip.buffer = 4 KiB
 	
 	redirect.max = 10
 	
-	recyclers {
-		ttl = 30 seconds
-		check = 10 seconds
-	}
-	
-	file {
-		index = "index.html"
-		buffer = 32 KiB
-		contentTypes = [
-			{
-				extension = ".html"
-				contentType = "text/html; charset=UTF-8"
-			}
-			{
-				extension = ".txt"
-				contentType = "text/plain; charset=UTF-8"
-			}
-			{
-				extension = ".css"
-				contentType = "text/css; charset=UTF-8"
-			}
-			{
-				extension = ".js"
-				contentType = "application/javascript; charset=UTF-8"
-			}
-			{
-				extension = ".json"
-				contentType = "application/json; charset=UTF-8"
-			}
-			{
-				extension = ".jpg"
-				contentType = "image/jpeg"
-			}
-			{
-				extension = ".jpeg"
-				contentType = "image/jpeg"
-			}
-			{
-				extension = ".png"
-				contentType = "image/png"
-			}
-			{
-				extension = ".pdf"
-				contentType = "application/pdf"
-			}
-		]
-	}
+	file.contentTypes = [
+		{
+			extension = ".html"
+			contentType = "text/html; charset=UTF-8"
+		}
+		{
+			extension = ".txt"
+			contentType = "text/plain; charset=UTF-8"
+		}
+		{
+			extension = ".css"
+			contentType = "text/css; charset=UTF-8"
+		}
+		{
+			extension = ".js"
+			contentType = "application/javascript; charset=UTF-8"
+		}
+		{
+			extension = ".json"
+			contentType = "application/json; charset=UTF-8"
+		}
+		{
+			extension = ".jpg"
+			contentType = "image/jpeg"
+		}
+		{
+			extension = ".jpeg"
+			contentType = "image/jpeg"
+		}
+		{
+			extension = ".png"
+			contentType = "image/png"
+		}
+		{
+			extension = ".pdf"
+			contentType = "application/pdf"
+		}
+	]
 	
 	service {
 		threads = 8
