with produce limit

--- a/ninio-http/src/main/resources/com.davfx.ninio.http.conf
+++ b/ninio-http/src/main/resources/com.davfx.ninio.http.conf
@@ -48,6 +48,7 @@ com.davfx.ninio.http {
 		threads = 8
 		post.limit = 1 MiB
 		stream.buffer = 32 KiB
+		produce.limite = 1 MiB
 		resources = "/"
 		index = "index.html"
 	}
