--- a/ninio-http/src/main/resources/com.davfx.ninio.http.conf
+++ b/ninio-http/src/main/resources/com.davfx.ninio.http.conf
@@ -1,4 +1,5 @@
 include com.davfx.ninio.core
+include com.davfx.ninio.dns
 
 com.davfx.ninio.http {
 	gzip.buffer = 4 KiB
@@ -48,7 +49,7 @@ com.davfx.ninio.http {
 		threads = 8
 		post.limit = 1 MiB
 		stream.buffer = 32 KiB
-		produce.limite = 1 MiB
+		produce.limit = 1 MiB
 		resources = "/"
 		index = "index.html"
 	}
