--- a/ninio-http/pom.xml
+++ b/ninio-http/pom.xml
@@ -43,6 +43,10 @@
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-dns</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
