--- a/ninio-proxy/src/main/resources/com.davfx.ninio.proxy.conf
+++ b/ninio-proxy/src/main/resources/com.davfx.ninio.proxy.conf
@@ -1,4 +1,7 @@
 include com.davfx.ninio.core
+include com.davfx.ninio.ping
+include com.davfx.ninio.dns
+include com.davfx.ninio.http
 
 com.davfx.ninio.proxy {
 	tcp = tcp
