--- a/ninio-dns/src/main/resources/com.davfx.ninio.dns.conf
+++ b/ninio-dns/src/main/resources/com.davfx.ninio.dns.conf
@@ -1,3 +1,19 @@
 com.davfx.ninio.dns {
 	default = 8.8.8.8 // Alternates: 164.177.18.14, 78.240.87.77
+	
+	hosts {
+		v4 = [
+			{
+				host = localhost
+				ip = "127.0.0.1"
+			}
+		]
+
+		v6 = [
+			{
+				host = localhost
+				ip = "::1"
+			}
+		]
+	}
 }
