By default DNS using sync lib

--- a/ninio-dns/src/main/resources/com.davfx.ninio.dns.conf
+++ b/ninio-dns/src/main/resources/com.davfx.ninio.dns.conf
@@ -1,4 +1,6 @@
 com.davfx.ninio.dns {
+	system = true // Set to false to use the powah of async!
+
 	default = 8.8.8.8 // Alternates: 164.177.18.14, 78.240.87.77
 	
 	hosts {
