--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -1,4 +1,9 @@
 com.davfx.ninio.core {
+	queue {
+		waitOnError = 10 seconds
+		waitOnClose = 10 seconds
+	}
+	
 	buffer.default = 1 KiB
 
 	datagram.write.buffer = 0 // 100 MiB
