More conf available for sockets

--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -4,10 +4,26 @@ com.davfx.ninio.core {
 		waitOnClose = 10 seconds
 	}
 	
+	threading = 1
+	
 	buffer.default = 1 KiB
 
-	datagram.write.buffer = 0 // 100 MiB
-	socket.write.buffer = 0 // 100 MiB
+	udp.buffer.write = 0 // 100 MiB
+	tcp.buffer.write = 0 // 100 MiB
+	
+	udp.socket {
+		write = 0
+		read = 0
+	}
+	tcp.socket {
+		write = 0
+		read = 0
+		timeout = 0
+	}
+	tcp.serversocket {
+		read = 0
+		timeout = 0
+	}
 
 	tcpdump {
 		path = tcpdump
