--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -6,6 +6,11 @@ com.davfx.ninio.core {
 	
 	threading = 1
 	
+	udp.supervision {
+		display = 10 seconds
+		clear = 5 minutes
+	}
+	
 	buffer.default = 1 KiB
 
 	udp.buffer.write = 0 // 100 MiB
