Tcp supervision. NinioPriority queue

--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -5,11 +5,20 @@ com.davfx.ninio.core {
 	}
 	
 	threading = 1
-	queuing = 2
 	
-	udp.supervision {
-		display = 10 seconds
-		clear = 5 minutes
+	supervision {
+		udp {
+			display = 10 seconds
+			clear = 5 minutes
+		}
+		tcp {
+			display = 10 seconds
+			clear = 5 minutes
+		}
+		tcpserver {
+			display = 10 seconds
+			clear = 5 minutes
+		}
 	}
 	
 	buffer.default = 1 KiB
