--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -2,6 +2,7 @@ com.davfx.ninio.core {
 	queue {
 		waitOnError = 10 seconds
 		waitOnClose = 10 seconds
+		max = 2 // HIGH and REGULAR priorities
 	}
 	
 	threading = 1
