--- a/ninio-core/src/main/resources/com.davfx.ninio.core.conf
+++ b/ninio-core/src/main/resources/com.davfx.ninio.core.conf
@@ -12,6 +12,10 @@ com.davfx.ninio.core {
 			display = 10 seconds
 			clear = 5 minutes
 		}
+		tcpdump {
+			display = 10 seconds
+			clear = 5 minutes
+		}
 		tcp {
 			display = 5 seconds
 		}
